--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="stylesheet" href="global.css" />
 		<!-- SMUI Styles -->
-		<link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)" />
-		<link rel="stylesheet" href="/smui-dark.css" media="screen and (prefers-color-scheme: dark)" />
+		<link rel="stylesheet" href="smui.css" media="(prefers-color-scheme: light)" />
+		<link rel="stylesheet" href="smui-dark.css" media="screen and (prefers-color-scheme: dark)" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
