--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,7 @@
 		<!-- SMUI Styles -->
 		<link rel="stylesheet" href="smui.css" media="(prefers-color-scheme: light)" />
 		<link rel="stylesheet" href="smui-dark.css" media="screen and (prefers-color-scheme: dark)" />
+		<link rel="stylesheet" href="material_icons.css" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
