--- a/src/app.html
+++ b/src/app.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="stylesheet" href="global.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/global.css" />
 		<!-- SMUI Styles -->
-		<link rel="stylesheet" href="smui.css" media="(prefers-color-scheme: light)" />
-		<link rel="stylesheet" href="smui-dark.css" media="screen and (prefers-color-scheme: dark)" />
-		<link rel="stylesheet" href="material_icons.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/smui.css" media="(prefers-color-scheme: light)" />
+		<link rel="stylesheet" href="%sveltekit.assets%/smui-dark.css" media="screen and (prefers-color-scheme: dark)" />
+		<link rel="stylesheet" href="%sveltekit.assets%/material_icons.css" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
